# Touchstone

./: .gitattributes  .gitignore  HANDOFF.md  PERCEPTION_MASTER_PLAN.md  README.md  analyze.cjs  batch_test.cjs  browser_test.cjs  diag_mrz.cjs  e2e_test.cjs  eslint.config.js  index.html  mp_pdf_test.cjs  package-lock.json  package.json  plan.md  vite.config.ts  vitest.config.ts  ws_ia_test.cjs
.staging/: ab3way.py  apply-post-chain.ps1  beam_probe.ts  bridge_probe.ts  dump_lattices.py  failing_lattices.json  fix-country-code.md  fix-tax-po-silents.md  gate-mixed-patch.md  replay_failure.ts  vitest.staging.ts
Documentation/: 00_CONSTITUTION.md  01_PRODUCT_AND_FEATURES.md  02_ARCHITECTURE.md  03_INNOVATIONS.md  04_MODEL_SELECTION.md  05_PERCEPTION_SERVICE.md  06_EVIDENCE_BUNDLE_CONTRACT.md  07_LATTICE_BEAM_GRAMMARS.md  08_CONSENSUS_AND_ATTESTORS.md  09_TEMPLATE_ENGINE.md  10_VISUAL_ASSETS_AND_TABLES.md  11_WORKSPACE_DATA_MODEL.md  12_UI_UX_SPEC.md  13_PERFORMANCE_BUDGETS.md  14_QUALITY_TESTING.md  15_ROADMAP_TASKS.md  16_ENGINEERING_RULES.md  17_SECURITY_PRIVACY_PLAN.md  18_GLOSSARY.md  19_LEGACY_AND_ARCHIVE.md  19_THREAT_MODEL_REVIEW.md  20_DOCUMENT_UNIVERSE.md  21_DATASET_FACTORY.md  22_HANDOFF_TASKS.md  README.md
Research/: Data Pipeline Design for Universal Document Primitive Detection (docdet).md  deep-research-report.md  epoch_efficiency_research.md  g1.md  kaggle_long_run_playbook.md
bench/: ab_v6.py  ai-services.mjs  e2e-ui.mjs  forge-adversarial.mjs  gate.mjs  goldens.mjs  inspect-one.mjs  label-real.ts  make-multipage-pdf.cjs  make-specimen.cjs  modal_gate.py  perf.mjs  responsive-smoke.mjs  upload_corpus.py  vision-judge.mjs  visual-binding.mjs
docs/: README.md
kaggle_train/: docdet_train_cell.py
mini-doc/: 01_PRODUCT_SPEC.md  02_ARCHITECTURE.md  03_DATA_MODEL.md  04_PIPELINES.md  (+12 more)
service/: Dockerfile  MANIFEST.in  MANIFEST.json  bundle-schema.json  bundle.py  config.py  fetch_models.py  ladder.py  main.py  pyproject.toml  requirements.txt  router.py
service/stages/: align_stage.py  codes_stage.py  det_stage.py  dewarp_stage.py  layout_stage.py  ocr_tap.py  office_stage.py  pdf_stage.py  quality_stage.py  reconcile.py  seal_stage.py  tables_stage.py
service/tests/: conftest.py  test_align_stage.py  test_bundle_contract.py  test_codes_stage.py  test_dewarp_stage.py  test_ladder_e2e.py  test_lattice_tap.py  test_layout_stage.py  test_native_routes.py  test_packaging.py  test_quality_stage.py  test_reconcile.py  test_seal_stage.py  test_service_http.py  test_tables_stage.py
(+825 files in other folders)
