[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docutract-service"
version = "0.1.0"
description = "docutract perception service — stateless senses: bytes in, Evidence Bundle out (binds 127.0.0.1 only)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "onnxruntime>=1.22,<2",
  "numpy>=2,<3",
  "pillow>=11,<13",
  "pypdfium2>=4,<5",
  "openpyxl>=3.1,<4",
  "python-docx>=1.1,<2",
  "jsonschema>=4.23,<5",
  "opencv-python-headless>=4.10",
  "zxing-cpp>=2.2",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "httpx>=0.27"]

[project.scripts]
docutract-service = "main:run_cli"

[tool.setuptools]
py-modules = ["main", "config", "ladder", "bundle", "router", "fetch_models"]

[tool.setuptools.packages.find]
include = ["stages*"]

[tool.setuptools.package-data]
"*" = ["MANIFEST.json", "bundle-schema.json"]
