[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docutract-service"
version = "0.1.0"
description = "docutract perception service — stateless senses: bytes in, Evidence Bundle out (binds 127.0.0.1 only)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "onnxruntime>=1.22,<2",
  "numpy>=2,<3",
  "pillow>=11,<13",
  "pypdfium2>=4,<5",
  "openpyxl>=3.1,<4",
  "python-docx>=1.1,<2",
  "jsonschema>=4.23,<5",
  "opencv-python-headless>=4.10",
  "zxing-cpp>=2.2",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "httpx>=0.27"]

[project.scripts]
docutract-service = "docutract_service.main:run_cli"

# Package-dir mapping: the service stays FLAT in the repo (every module in
# service/, flat imports, sys.path bootstrap in main) but ships as a proper
# package — the only layout in which wheels deliver package-data (a flat
# py-modules wheel silently drops MANIFEST.json/bundle-schema.json, which
# fetch-verify and the bundle contract both refuse to run without).
[tool.setuptools]
packages = ["docutract_service", "docutract_service.stages"]

[tool.setuptools.package-dir]
docutract_service = "."
"docutract_service.stages" = "stages"

[tool.setuptools.package-data]
docutract_service = ["MANIFEST.json", "bundle-schema.json"]
